// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm bwcsry"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ ciLygA"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm qOzAf"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ dlbSVZ"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm fNPXAb"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ dYqQHE"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm krSaxO"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ bxlHKV"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm hgnzqN"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ hTzPEr"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm bwcsry"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ kHLfwz"
      color="primary"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm liXtzU"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ kUfnao"
      color="danger"
      type="button"
    />
  </div>
=======
  <button
    class="sc-AxjAm gCgPHf"
    type="button"
  />
>>>>>>> origin/develop
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      disabled=""
      type="button"
    >
      Click
    </button>
  </div>
</DocumentFragment>
`;

exports[`Button should render white text if primary 1`] = `
<div>
  <div>
    <button
      class="sc-AxirZ hNClQs"
      color="primary"
      type="button"
    />
  </div>
</div>
`;
=======
  <button
    class="sc-AxjAm ghbEwY"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
>>>>>>> origin/develop
